--- a/public/style.css
+++ b/public/style.css
@@ -142,8 +142,14 @@ em {font-style: italic;}
 a {color: #2997AB; text-decoration: none}
 
 
-#container ul li {list-style:none}
-#container ol li {list-style: none}
+#container ul li {
+	list-style-type: disc;
+	margin-left: 20px;
+	}
+#container ol li {
+	list-style-type: decimal;
+	margin-left: 20px;
+	}
 
 blockquote {font-family:Georgia, "Times New Roman", Times, serif; font-style: italic; margin: 10px 0}
 
